# rust

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  RELEASING.md  cliff.toml  justfile  lefthook.yml  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-plz.yml  release-pr.yml  release-tags.yml  release.yml
crates/json-sort/: CHANGELOG.md  Cargo.toml  README.md
crates/json-sort-server/: CHANGELOG.md  Cargo.toml  README.md  settings-schema.json
crates/json-sort-server/src/: actions.rs  backend.rs  cursor.rs  documents.rs  main.rs  settings.rs
crates/json-sort/src/: compare.rs  error.rs  jsonc.rs  lib.rs  options.rs
crates/zed-json-sort/: Cargo.toml  README.md  extension.toml
crates/zed-json-sort/src/: lib.rs
