[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["L4N3 <labs@l4n3.net>"]
edition = "2024"
repository = "https://github.com/l4n3-labs/rust"
license = "Apache-2.0"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "forbid"
