[package]
name = "json-sort-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "LSP server for sorting JSON/JSONC files"

[lints]
workspace = true

[dependencies]
json-sort = { path = "../json-sort" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "json-sort-server"
path = "src/main.rs"
