[package]
name = "json-sort"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Sort JSON and JSONC with multiple strategies and comment preservation"

[lints]
workspace = true

[dependencies]
jsonc-parser = "0.32"
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
rand = "0.9"

[dev-dependencies]
pretty_assertions = "1"
